Modif : suppression partie BATM (trop long)

--- a/index.html
+++ b/index.html
@@ -80,13 +80,8 @@
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/nsl.md"
-						data-separator="^\n\n"
-						data-separator-notes="^[N|n]otes?:"
-						data-charset="utf-8">
-				</section>
-				<section data-state="hide-logos"
-						data-markdown="content/batm.md"
-						data-separator="^\n\n"
+						data-separator="^\n\n\n"
+						data-separator-vertical="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
