Premiere version complete

--- a/index.html
+++ b/index.html
@@ -300,14 +300,14 @@
 			#presentable-toc ol ol {
 				display: none;
 			}
-			.reveal ul li {
-				font-size: 35px;
+			.reveal ul li, .reveal ol li {
+				font-size: 30px;
 			}
 			.reveal table thead tr th {
-				font-size: 25px;
+				font-size: 20px;
 			}
 			.reveal table tbody tr td {
-				font-size: 25px;
+				font-size: 20px;
 			}
 			.reveal .slides section .fragment.step-fade-in-then-out {
 				opacity: 0;
