--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 				opacity: 1;
 				display: inline;
 			}
+			.tabular table {
+				margin-bottom: 30px;
+			}
 		</style>
 
 		<!-- 2. Create hidden header/footer <div> -->
