--- a/index.html
+++ b/index.html
@@ -52,50 +52,50 @@
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/wisenet.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/etat-art.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/problematique.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/nsl.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/mlte.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/cist.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
 				<section data-state="hide-logos"
 						data-markdown="content/conclusion.md"
-						data-separator="^\n\n\n"
-						data-separator-vertical="^\n\n"
+						data-separator-vertical="^\n\n\n"
+						data-separator="^\n\n"
 						data-separator-notes="^[N|n]otes?:"
 						data-charset="utf-8">
 				</section>
